--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,12 @@ accelerate>=0.27.0
 sentencepiece>=0.1.99
 anthropic>=0.28.0
 python-dotenv>=1.0.0
-tqdm>=4.65.0
+tqdm
 
 # Note: Install PyTorch separately with:
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
 
-mergekit>=0.2.4
+mergekit
+wandb
+jupyterlab
+jupytext
